--- a/src/UI/Components/MiniMap/MiniMapV2/MiniMapV2.css
+++ b/src/UI/Components/MiniMap/MiniMapV2/MiniMapV2.css
@@ -1,5 +1,6 @@
 :host {
 	top: 16px;
+	right: 16px;
 }
 
 #MiniMapV2 .info_container {
